refractor : benchmark results